--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@
 }
 :root {
   --main-color: #033a80;
-  --bg-color: rgb(245, 239, 239);
-  --text-color: #1d0fdd;
+  --bg-color: rgb(11, 179, 87);
+  --text-color: #2619da;
   --hover: hsla(244, 98%, 51%, 0.596);
  
   --big-font: 3.2rem;
