--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,10 @@
   font-family: "Poppins", sans-serif;
 }
 :root {
-  --main-color: #002a61;
-  --bg-color: rgb(239, 247, 242);
-  --text-color: #b20af5;
-  --hover: hsla(244, 98%, 51%, 0.596);
+  --main-color: #033a80;
+  --bg-color: #fff;
+  --text-color: #0f0c27;
+  --hover: hsl(260, 100%, 51%);
  
   --big-font: 3.2rem;
   --medium-font: 1.8rem;
@@ -24,8 +24,8 @@ section {
   padding: 50px 10%;
 }
 body.active {
-  --text-color: #2e0cec;
-  --bg-color: #f7f7f7;
+  --text-color: #fff;
+  --bg-color: #0f0c27;
 }
 body {
   background: var(--bg-color);
@@ -65,10 +65,9 @@ header.shadow {
   box-shadow: 0 0 4px rgb(14 55 54 / 15%);
 }
 .logo {
-   padding-top: 5px;
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  height: 10px;
+  font-size: 1.61rem;
+  font-weight: 600;
+  color: var(--text-color);
 }
 .navbar {
   display: flex;
@@ -88,6 +87,10 @@ header.shadow {
   z-index: 10001;
   display: none;
 }
+#darkmode {
+  font-size: 22px;
+  cursor: pointer;
+}
 .home {
   position: relative;
   width: 100%;
@@ -101,12 +104,7 @@ header.shadow {
   order: 3;
 }
 .home-img img {
-  position: relative;
-  top: 100px; 
-  height:450px;
-  left: 150px;
-  width:150%;
-
+  width: 100%;
 }
 .home-text span {
   font-size: var(--medium-font);
@@ -123,6 +121,18 @@ header.shadow {
   font-size: var(--p-font);
   font-weight: 400;
   margin: 0.7rem 0 1rem;
+}
+.social {
+  display: flex;
+  flex-direction: column;
+}
+.social a {
+  margin-bottom: 1rem;
+  font-size: 22px;
+  color: var(--text-color);
+}
+.social a:hover {
+  color: var(--hover);
 }
 .btn {
   display: inline-block;
@@ -144,7 +154,8 @@ header.shadow {
 }
  
 .about-img img {
-  width: 50%;
+  width: 80%;
+  border-radius: 0.5rem;
 }
 .about-text p {
   font-size: var(--p-font);
@@ -220,6 +231,52 @@ span {
 .react-bar {
   width: 80%;
 }
+.services-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+.services-box {
+  padding: 20px;
+  width: 260px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border-radius: 0.5rem;
+  border-bottom: 2px solid var(--main-color);
+  box-shadow: 0 2px 7px rgb(14 55 54 / 15%);
+}
+.services-box:hover{
+ background-color: #02225a;
+}
+
+.services-box h3 {
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 0.7rem 0 0.4rem;
+}
+.services-box:hover h3{
+  color: #fff;
+}
+.services-box .bx {
+  padding-top: 2rem;
+  font-size: 54px;
+  color: var(--main-color);
+}
+.services-box:hover .bx{
+  color: #22cf91;
+}
+.services-box a {
+  color: var(--main-color);
+  font-size: var(--p-font);
+  font-weight: 500;
+}
+.services-box:hover a{
+  color: #8b8a8f;
+}
 .portfolio-content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, auto));
@@ -235,24 +292,6 @@ span {
   display: block;
 }
 .portfolio-img img:hover {
-  transform: scale(1.1);
-  transition: 1s;
-}
-.blogs-content {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, auto));
-  gap: 1rem;
-  margin-top: 2rem;
-}
-.blogs-img {
-  overflow: hidden;
-  border-radius: 0.5rem;
-}
-.blogs-img img {
-  width: 100%;
-  display: block;
-}
-.blogs-img img:hover {
   transform: scale(1.1);
   transition: 1s;
 }
@@ -303,7 +342,7 @@ form textarea {
   place-items: center;
   padding: 20px;
   background: #ebebeb;
-  color: rgb(14, 180, 42);
+  color: #000;
 }
 .footer h2 {
   font-size: 1.5rem;
